<resources>
    <string name="app_name">Gestion_Juegos_Kotlin</string>
    <string name="password">Contraseña</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="description">Descripción</string>
    <string name="details">Detalles</string>
    <string name="releases">Lanzamientos</string>
    <string name="time_suf">h</string>
    <string name="state">Estado:</string>
    <string name="time">Tiempo jugado:</string>
    <string name="score">Nota:</string>
    <string name="add_btn">Añadir juego</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>