<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/game_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/game_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="score_text,score_value,state_text,state_value,time_text,time_value,time_value_suf" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_cover">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releases" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/score"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/state_text"
        app:layout_constraintStart_toEndOf="@+id/game_cover" />

    <Spinner
        android:id="@+id/score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/score_text"
        app:layout_constraintStart_toEndOf="@+id/score_text"
        app:layout_constraintTop_toTopOf="@+id/score_text" />

    <TextView
        android:id="@+id/state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/state"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/game_cover"
        app:layout_constraintStart_toEndOf="@+id/game_cover"
        app:layout_constraintTop_toTopOf="@+id/game_cover" />

    <Spinner
        android:id="@+id/state_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/state_text"
        app:layout_constraintStart_toEndOf="@+id/state_text"
        app:layout_constraintTop_toTopOf="@+id/state_text" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/time"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/game_cover"
        app:layout_constraintTop_toBottomOf="@+id/state_text" />

    <EditText
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="4"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/time_text"
        app:layout_constraintStart_toEndOf="@+id/time_text"
        app:layout_constraintTop_toTopOf="@+id/time_text" />

    <TextView
        android:id="@+id/time_value_suf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_suf"
        app:layout_constraintBottom_toBottomOf="@+id/time_value"
        app:layout_constraintStart_toEndOf="@+id/time_value"
        app:layout_constraintTop_toTopOf="@+id/time_value" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/add_btn"
        app:layout_constraintBottom_toBottomOf="@+id/game_cover"
        app:layout_constraintStart_toEndOf="@+id/game_cover"
        app:layout_constraintTop_toTopOf="@+id/game_cover" />


</androidx.constraintlayout.widget.ConstraintLayout>